<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="SigninFragmentBinding">

        <variable
            name="viewModel"
            type="com.snt.phoney.ui.signup.SignupViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signin_bg"
        android:orientation="vertical"
        android:paddingStart="@dimen/sign_content_padding_start"
        android:paddingEnd="@dimen/sign_content_padding_end">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/signin_label"
            android:textColor="@color/white"
            android:textSize="32sp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/phone_number"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_normal" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:background="@drawable/white_rounded_corner_selector"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingTop="5dp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:text="@string/phone_number_prefix"
                android:textColor="@color/darker"
                android:textSize="@dimen/textsize_normal" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:background="@drawable/edittext_underline"
                android:inputType="numberDecimal"
                android:paddingLeft="54dp"
                android:paddingRight="25dp"
                android:text="@{viewModel.user != null? viewModel.user.username : null}"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_large" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/verification_code"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_normal" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height">

            <EditText
                android:id="@+id/verificationCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:background="@drawable/edittext_underline"
                android:paddingStart="25dp"
                android:paddingLeft="54dp"
                android:paddingEnd="25dp"
                android:text="@{viewModel.user != null? viewModel.user.password : null}"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_large" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/getVerificationCode"
                android:layout_width="80dp"
                android:layout_height="@dimen/button_get_verification_code_height"
                android:layout_gravity="center|right"
                android:background="@drawable/white_rounded_corner_selector"
                android:clickable="true"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingTop="5dp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:text="@string/get_verification_code"
                android:textColor="@color/darker"
                android:textSize="@dimen/textsize_small" />
        </FrameLayout>

        <Button
            android:id="@+id/login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_circle_corner_border_selector"
            android:elevation="0dp"
            android:text="@string/btn_login"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgetPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/btn_forget_password"
            android:visibility="gone"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/qq"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_qq_icon" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/weixin"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_wechat_icon" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/weibo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_weibo_icon" />
        </LinearLayout>

    </LinearLayout>
</layout>